reworked divs and rows for #leftInterface to allow the map to be manipulated to the side of the displayed blocks. With initial setup the row covered the map, preventing map manipulation. displayed blocks are now contained within a column div and a row div, and the displayed blocks are assigned the .onTop class.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,9 +73,13 @@ body {
     height: 95vh;
 }
 
-#leftInterface, #rightInterface {
+.interfaceSizing {
     height: 75vh;
     margin: 5vh 0;
+}
+
+#boundaryHead {
+    height: 37.5vh;
 }
 
 .height100 {
